modify(core): install parcel

--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
   "scripts": {
     "start": "parcel index.html"
   },
-  "keywords": ["HTML", "CSS", "JS", "Prettier", "ESLint", "Parcel"],
+  "keywords": [
+    "HTML",
+    "CSS",
+    "JS",
+    "Prettier",
+    "ESLint",
+    "Parcel"
+  ],
   "author": "Stephen Ikuomola",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.13.0"
+  }
 }
