--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "author": "Stephen Ikuomola",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "parcel": "^2.13.0"
+  },
+  "dependencies": {
+    "open-props": "^1.7.13"
   }
 }
