--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@eslint/js": "^9.21.0",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
-    "parcel": "^2.13.0"
+    "parcel": "^2.13.0",
+    "prettier": "3.5.3"
   },
   "dependencies": {
     "open-props": "^1.7.13"
