--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "source": "index.html",
   "browserslist": "> 0.3%, last 2 versions, Firefox ESR, not dead",
   "scripts": {
+    "lint": "npx eslint src/*.js",
     "start": "parcel index.html"
   },
   "keywords": [
