--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
     "parcel": "^2.13.0",
     "prettier": "3.5.3"
   },
   "dependencies": {
+    "eslint-plugin-jsdoc": "^50.6.3",
+    "eslint-plugin-prettier": "^5.2.3",
     "open-props": "^1.7.13"
   }
 }
