--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "globals": "^16.0.0",
     "jsonc-eslint-parser": "^2.4.0",
     "parcel": "^2.13.0",
-    "prettier": "3.5.3"
+    "prettier": "3.5.3",
+    "svgo": "^3.3.2"
   },
   "@parcel/transformer-css": {
     "pseudoClasses": {
